Added manifest and image for hackathon post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="manifest" href="manifest.json">
 
     <!-- Chrome, Firefox OS and Opera -->
-    <meta name="theme-color" content="#00d26a"/>
+    <meta name="theme-color" content="#4285f4">
     <!-- Windows Phone -->
     <meta name="msapplication-navbutton-color" content="#00d26a"/>
     <!-- iOS Safari -->
