Added Yandex verification code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,10 @@
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#00d26a"/>
 
+    <!-- Yandex Verification -->
+    <meta name="yandex-verification" content="f8c173478d2a14f7"/>
+
+
     {% if site.plugins_dir contains 'jekyll-seo-tag' %} {% include head-seo.html
     %} {% else %}
     <title>
